[gd_scene load_steps=13 format=2]

[ext_resource path="res://Zone1/Monsters/OignonSlime.png" type="Texture" id=1]
[ext_resource path="res://Zone1/Monsters/PatrolEnnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.7809, 6.62614 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.9431, 33.1631 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.0619, 32.4648 )

[sub_resource type="CircleShape2D" id=4]
radius = 16.8273

[sub_resource type="CircleShape2D" id=5]
radius = 16.0409

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 176.376, 46.9105 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 163.003, 44.9984 )

[sub_resource type="CircleShape2D" id=9]
radius = 18.9722

[sub_resource type="CircleShape2D" id=10]
radius = 19.0174

[sub_resource type="CircleShape2D" id=11]
radius = 45.7977

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="SpriteRig" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteRig"]
scale = Vector2( 1.1506, 1.1506 )
texture = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="GroundDetection" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/GroundDetection"]
position = Vector2( -4.14352, 57.2079 )
shape = SubResource( 1 )

[node name="LeftWallDetection" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/LeftWallDetection"]
position = Vector2( -72.7802, 3.22355 )
shape = SubResource( 2 )

[node name="RightWallDetection" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/RightWallDetection"]
position = Vector2( 70.5642, 5.45263 )
shape = SubResource( 3 )

[node name="LeftCliffDetection" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/LeftCliffDetection"]
position = Vector2( -95.7904, 78.148 )
shape = SubResource( 4 )

[node name="RightCliffDetection" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/RightCliffDetection"]
position = Vector2( 95.4494, 77.9995 )
shape = SubResource( 5 )

[node name="LeftJumpZone" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/LeftJumpZone"]
position = Vector2( -107.374, -219.089 )
shape = SubResource( 6 )

[node name="RightJumpZone" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/RightJumpZone"]
position = Vector2( 95.0002, -219.001 )
shape = SubResource( 7 )

[node name="LeftDropDetection" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/LeftDropDetection"]
position = Vector2( -117.862, 185.634 )
shape = SubResource( 9 )

[node name="RightDropDetection" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/RightDropDetection"]
position = Vector2( 111.758, 183.663 )
shape = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.27426 )
shape = SubResource( 11 )
